updated file paths and added 10.14

--- a/Tugas Week 5/Shapes/.project
+++ b/Tugas Week 5/Shapes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Tugas Week 5</name>
+	<name>Shapes</name>
 	<comment></comment>
 	<projects>
 	</projects>
